# lib/server/routers/tags.router.js
@@ -19,6 +19,12 @@ module.exports = {
     children: [
         {
             method: 'get',
+            path: 'name',
+            args: { public: true },
+            controller: TagsController.getNotificationByTagName,
+        },
+        {
+            method: 'get',
             controller: TagsController.listTags,
             args: { public: true },
         },
@@ -57,12 +63,6 @@ module.exports = {
                     controller: TagsController.deleteTag,
                 },
             ],
-        },
-        {
-            method: 'get',
-            path: 'name',
-            args: { public: true },
-            controller: TagsController.getNotificationByTagName,
         },
     ],
 };
