# spec/openapi.yaml
@@ -1,4 +1,4 @@
-# Generated on Thu, 24 Mar 2022 09:04:16 GMT
+# Generated on Tue, 29 Mar 2022 09:44:25 GMT
 
 openapi: 3.0.0
 info:
@@ -394,6 +394,21 @@ paths:
           $ref: '#/components/responses/UnexpectedError'
       tags:
         - tag
+  /tags/name:
+    get:
+      operationId: getTagByName
+      summary: Can find tag by name
+      parameters:
+        - $ref: '#/components/parameters/TagName'
+      responses:
+        '200':
+          $ref: '#/components/responses/ArrayOfTags'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        default:
+          $ref: '#/components/responses/UnexpectedError'
   /tags/{tagId}:
     parameters:
       - $ref: '#/components/parameters/TagId'
@@ -488,6 +503,13 @@ components:
       schema:
         $ref: '#/components/schemas/LogSortOptions'
       style: deepObject
+    TagName:
+      in: query
+      name: name
+      description: The name of a tag
+      required: true
+      schema:
+        $ref: '#/components/'
     Pagination:
       name: page
       description: Specifies the pagination requirements.
@@ -1644,6 +1666,9 @@ components:
       required:
         - data
       additionalProperties: false
+    TagName:
+      description: The name of the tag
+      type: string
     UpdateFlp:
       description: Describes an update to an flp
       type: object
